--- a/detail.html
+++ b/detail.html
@@ -101,7 +101,7 @@
         </div>
         <nav class="global">
             <div class="container-max">
-                <div class="row justify-content-between">
+                <div class="row justify-content-between category-parent">
                     <div class="category">
                         <a href="#"><i class="fa-solid fa-bars"></i></a>
                         <div class="category-subnav">
@@ -167,6 +167,7 @@
                 <!-- 상품정보 LOOP -->
                 <div class="col-md-6 pl-md-5 pr-list">
                     <form name="detail-form" method="post">
+                        <input type="hidden" name="title" id="title" value="링클프리 스트라이프 셔츠">
                         <input type="hidden" name="prcode" id="prcode" value="P00103EEA">
                         <input type="hidden" name="prprice" id="prprice" value="30900">
                         <input type="hidden" name="reserves" id="reserves" value="247">
@@ -185,25 +186,25 @@
                             <li><label class="title-label">적립금</label> 247원</li>
                             <li><label class="title-label">배송비</label> 3,000원 [<span>50,000원</span> 이상 구매시, <span>배송비 무료</span>]</li>
                             <li class="line colors"><label class="title-label">컬러 </label>
-                                <input type="radio" name="color" checked id="black" value="검정">
+                                <input type="radio" name="color" checked id="black" data-color="0" data-colorname="검정" value="검정">
                                 <label for="black" class="black"></label>
-                                <input type="radio" name="color" id="pink" value="핑크">
+                                <input type="radio" name="color" id="pink" data-color="1000" data-colorname="핑크" value="핑크">
                                 <label for="pink" class="pink"></label>
-                                <input type="radio" name="color" id="navy" value="네이비">
+                                <input type="radio" name="color" id="navy" data-color="0" data-colorname="네이비" value="네이비">
                                 <label for="navy" class="navy"></label>
-                                <input type="radio" name="color" id="blue" value="파랑">
+                                <input type="radio" name="color" id="blue" data-color="0" data-colorname="파랑" value="파랑">
                                 <label for="blue" class="blue"></label>
-                                <input type="radio" name="color" id="beige" value="베이지">
+                                <input type="radio" name="color" id="beige" data-color="0" data-colorname="베이지" value="베이지">
                                 <label for="beige" class="beige"></label>
                                 <p class="selected">검정색</p>
                             </li>
                             <li class="line"><label class="title-label">사이즈 </label>
                                 <select class="size" name="size">
-                                    <option value="xsmall">XS</option>
-                                    <option value="small">S</option>
-                                    <option value="medium" selected>M</option>
-                                    <option value="large">L</option>
-                                    <option value="xlarge">XL</option>
+                                    <option value="xsmall" data-size="5000">XS</option>
+                                    <option value="small" data-size="0">S</option>
+                                    <option value="medium" data-size="0" selected>M</option>
+                                    <option value="large" data-size="0">L</option>
+                                    <option value="xlarge" data-size="5000">XL</option>
                                 </select>
                             </li>
 
@@ -217,30 +218,7 @@
                          -->
                         </ul>
                         <div class="t-price">
-                            <ul class="add-opt">
-                                <li class="total-text">
-
-                                </li>
-                                <li class="addbox d-flex align-items-center">
-                                    <label class="title-label">수량</label>
-                                    <div class="input-group mb-3 ㅢ-4">
-                                        <div class="input-group-prepend">
-                                            <button class="btn btn-outline-line" id="qdown" type="button">
-                                                <i class="fa-solid fa-chevron-down"></i>
-                                            </button>
-                                        </div>
-                                        <input type="number" class="quantity" id="quantity" name="quantity" value="1" readonly>
-                                        <div class="input-group-append">
-                                            <button class="btn btn-outline-line" id="qup" type="button">
-                                                <i class="fa-solid fa-chevron-up"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="tomoney">
-
-                                </li>
-                            </ul>
+                            <div class="addquantity"></div>
                             <div class="totalmoney">
                                 총 상품금액(수량)  :  <strong>27,700원</strong>(1개)
                             </div>
