--- a/list.html
+++ b/list.html
@@ -48,91 +48,91 @@
 
     <!-- HEADER -->    
     <header>
-    <div class="container-max">
-        <div class="row">
-            <nav class="top d-flex justify-content-between">
-                <ul class="nav">
-                    <li><a href="#">login</a></li>
-                    <li><a href="#">join us</a>
-                    <div class="msgbox">
-                        +10,000 P
-                    </div>
-                    </li>
-                    <li><a href="#">cart <span>0</span></a></li>
-                    <li><a href="#">order</a></li>
-                    <li class="mem"><a href="#">my page</a>
-                        <ul class="subnav">
-                            <li><a href="#">관심상품</a></li>
-                            <li><a href="#">주문조회</a></li>
-                            <li><a href="#">적립금</a></li>
-                            <li><a href="#">예치금</a></li>
-                            <li><a href="#">마이쿠폰</a></li>
-                            <li><a href="#">내가쓴글</a></li>
-                        </ul>
-                    </li>
-                    <li class="mem"><a href="#">community</a>
-                        <ul class="subnav">
-                            <li><a href="#">notice</a></li>
-                            <li><a href="#">q&a</a></li>
-                            <li><a href="#">review</a></li>
-                            <li><a href="#">event</a></li>
-                            <li><a href="#">자주묻는질문</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul class="right-nav nav">
-                    <li><a href="#" class="facebook"><i class="ri-facebook-fill"></i></a></li>
-                    <li><a href="#" class="instagram"><i class="ri-instagram-line"></i></a></li>
-                    <li><a href="#" class="kakao"><i class="ri-kakao-talk-fill"></i></a></li>
-                    <li><a href="#" class="youtube"><i class="ri-youtube-fill"></i></a></li>
-                    <li>
-                        <form name="searchform" class="searchform" id="searchform">
-                            <input type="search" name="search" class="search" placeholder="💖🌹고퀄리티 쇼핑몰!👍👍">
-                            <button type="button" class="btn btn-link btn-search"><i class="ri-search-line"></i></button>
-                        </form>
-                    </li>
-                </ul>
-            </nav>
-            <h1 class="brand">MY SHOPPING MALL</h1>
-            
-        </div>
-    </div>
-    <nav class="global border-top border-bottom">
         <div class="container-max">
-            <div class="row justify-content-between">
-                <div class="category">
-                    <a href="#"><i class="fa-solid fa-bars"></i></a>
-                    <div class="category-subnav">
-                        <ul class="category-subnav-view">
+            <div class="row">
+                <nav class="top d-md-flex d-none justify-content-between">
+                    <ul class="nav">
+                        <li><a href="#">login</a></li>
+                        <li><a href="#">join us</a>
+                        <div class="msgbox">
+                            +10,000 P
+                        </div>
+                        </li>
+                        <li><a href="#">cart <span>0</span></a></li>
+                        <li><a href="#">order</a></li>
+                        <li class="mem"><a href="#">my page</a>
+                            <ul class="subnav">
+                                <li><a href="#">관심상품</a></li>
+                                <li><a href="#">주문조회</a></li>
+                                <li><a href="#">적립금</a></li>
+                                <li><a href="#">예치금</a></li>
+                                <li><a href="#">마이쿠폰</a></li>
+                                <li><a href="#">내가쓴글</a></li>
+                            </ul>
+                        </li>
+                        <li class="mem"><a href="#">community</a>
+                            <ul class="subnav">
+                                <li><a href="#">notice</a></li>
+                                <li><a href="#">q&a</a></li>
+                                <li><a href="#">review</a></li>
+                                <li><a href="#">event</a></li>
+                                <li><a href="#">자주묻는질문</a></li>
+                            </ul>
+                        </li>
+                    </ul>
 
-                        </ul>
-                        <ul class="global-nav-view">
-                            <li><a href="#">BEST리뷰</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Q&A</a></li>
-                            <li><a href="#">배송조회</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <ul class="nav pr-category justify-content-between">
-                    <li><a href="#">new</a></li>
-                    <li><a href="#">빅사이즈</a></li>
-                    <li><a href="#">원피스</a></li>
-                    <li><a href="#">아우터</a></li>
-                    <li><a href="#">상의</a></li>
-                    <li><a href="#">바지</a></li>
-                    <li><a href="#">new</a></li>
-                </ul>
-                <ul class="nav global-nav justify-content-between">
-                    <li><a href="#">BEST리뷰</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Q&A</a></li>
-                    <li><a href="#">배송조회</a></li>
-                </ul>
+                    <ul class="right-nav nav">
+                        <li><a href="#" class="facebook"><i class="ri-facebook-fill"></i></a></li>
+                        <li><a href="#" class="instagram"><i class="ri-instagram-line"></i></a></li>
+                        <li><a href="#" class="kakao"><i class="ri-kakao-talk-fill"></i></a></li>
+                        <li><a href="#" class="youtube"><i class="ri-youtube-fill"></i></a></li>
+                        <li>
+                            <form name="searchform" class="searchform" id="searchform">
+                                <input type="search" name="search" class="search" placeholder="💖🌹고퀄리티 쇼핑몰!👍👍">
+                                <button type="button" class="btn btn-link btn-search"><i class="ri-search-line"></i></button>
+                            </form>
+                        </li>
+                    </ul>
+                </nav>
+                <h1 class="brand">MY SHOPPING MALL</h1>
+                
             </div>
         </div>
-    </nav>
+        <nav class="global">
+            <div class="container-max">
+                <div class="row justify-content-between category-parent">
+                    <div class="category">
+                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                        <div class="category-subnav">
+                            <ul class="category-subnav-view">
+
+                            </ul>
+                            <ul class="global-nav-view">
+                                <li><a href="#">BEST리뷰</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Q&A</a></li>
+                                <li><a href="#">배송조회</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <ul class="nav pr-category justify-content-between">
+                        <li><a href="#">new</a></li>
+                        <li><a href="#">빅사이즈</a></li>
+                        <li><a href="#">원피스</a></li>
+                        <li><a href="#">아우터</a></li>
+                        <li><a href="#">상의</a></li>
+                        <li><a href="#">바지</a></li>
+                        <li><a href="#">new</a></li>
+                    </ul>
+                    <ul class="nav global-nav justify-content-between">
+                        <li><a href="#">BEST리뷰</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Q&A</a></li>
+                        <li><a href="#">배송조회</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- HERO -->
