slick button works

--- a/detail.html
+++ b/detail.html
@@ -234,8 +234,9 @@
                 <!-- /상품정보 LOOP -->
 
             </div>
+
             <!-- 자세히 보기 -->
-            <div class="container mt-4 pt-4 border-top">
+            <div class="container shop-contents mt-4 pt-4 border-top">
                 <ul class="nav nav-pills">
                     <li class="active"><a data-toggle="pill" href="#view">상품상세정보</a></li>
                     <li><a data-toggle="pill" href="#guide">구매가이드</a></li>
@@ -243,7 +244,7 @@
                     <li><a data-toggle="pill" href="#qna">상품문의</a></li>
                 </ul>
                 
-                <div class="tab-content">
+                <div class="tab-content py-5">
                     <div id="view" class="tab-pane fade in active show">
                         <h3>HOME</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -253,8 +254,91 @@
                         <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                     </div>
                     <div id="review" class="tab-pane fade">
-                        <h3>Menu 1</h3>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h3>구매후기</h3>
+                        <div class="row pb-4 border-bottom">
+                            <div class="col-md-6 text-center">
+                                <h2>평균별점</h2>
+                                <div class="star">
+                                    <i class="ri-star-fill"></i>
+                                    <i class="ri-star-fill"></i>
+                                    <i class="ri-star-fill"></i>
+                                    <i class="ri-star-half-line"></i>
+                                    <i class="ri-star-line"></i>
+                                </div>
+                                <p class="score">3.5</p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <h2>별점비율</h2>
+                                <div class="ratio-box">
+                                    <div>
+                                        <div class="box-line">
+                                            <div class="box-line-color" style="height:76%;"></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="box-line">
+                                            <div class="box-line-color" style="height:84%;"></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="box-line">
+                                            <div class="box-line-color" style="height:56%;"></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="box-line">
+                                            <div class="box-line-color" style="height:0%;"></div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="box-line">
+                                            <div class="box-line-color" style="height:10%;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="review-photo">
+                            <div class="img">
+                                <a href="#"><img src="images/pd/100.jpg" alt="100"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/101.jpg" alt="101"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/102.jpg" alt="102"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/103.jpg" alt="103"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/104.jpg" alt="104"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/105.jpg" alt="105"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/106.jpg" alt="106"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/107.jpg" alt="107"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/108.jpg" alt="108"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/109.jpg" alt="109"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/110.jpg" alt="110"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/111.jpg" alt="111"></a>
+                            </div>
+                            <div class="img">
+                                <a href="#"><img src="images/pd/112.jpg" alt="112"></a>
+                            </div>
+                        </div>
                     </div>
                     <div id="qna" class="tab-pane fade">
                         <h3>Menu 2</h3>
