--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 
     <!-- HERO -->
     <div class="hero">
-        <div class="mySlick">
-        </div>
+        <div class="mySlick"></div>
+        <button type="button" class="hero-prev"><i class="ri-arrow-left-s-line"></i></button>
+        <button type="button" class="hero-next"><i class="ri-arrow-right-s-line"></i></button>
     </div>
 
     <!-- WHAT NEW -->
